deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tele-scraper
  labels:
    app.kubernetes.io/name: tele-scraper
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tele-scraper
  ports:
    - name: metrics
      port: 9100
      targetPort: metrics
